# bootcamp-ai

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  毕业总结.md
.chats/: w2.md  w4.md  w5.md  w6.md  w7.md
.claude/commands/: review.md
specs/001-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mysql-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/w1/: 0001-spec.md  0002-implementation-plan.md  instructions.md
specs/w2/: FEATURE_EXPORT.md  db_query_code_review.md  instructions.md
specs/w3/: instructions.md
specs/w4/: codex-apply-patch-integration.md  codex-apply-patch.md  codex-arch-by-claude.md  codex-arch-by-codex.md  codex-changes-by-claude.md  codex-compact.md  codex-event-loop.md  codex-tool-call.md
specs/w5/: 0001-pg-mcp-prd.md  0002-pg-mcp-design.md  0004-pg-mcp-impl-plan.md  0005-pg-mcp-impl-plan-review.md  0006-pg-mcp-code-review.md  0007-pg-mcp-test-plan.md  0008-pg-mcp-test-plan-review.md  0009-pg-mcp-new-features-prd.md  0010-pg-mcp-new-features-design.md  0011-pg-mcp-new-features-impl-plan.md  0012-pg-mcp-new-features-code-review.md  0013-pg-mcp-review-feedback-impl-plan.md
specs/w6/: 0003-code-review-agent-design.md  0004-code-review-agent-codex-review.md
specs/w7/: 0001-prd.md  0002-design-spec.md
w1/: .gitignore  .pre-commit-config.yaml  PRE_COMMIT_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  instructions.md  setup-precommit.sh  verify-setup.sh
w1/backend/: .env.example  .env.production  main.py  pyproject.toml  ruff.toml
w1/backend/alembic/: env.py
w1/backend/alembic/versions/: 8919a1b75392_initial_migration.py
w1/backend/app/: database.py  main.py
w1/backend/app/api/: __init__.py  tags.py  tickets.py
w1/backend/app/core/: config.py
w1/backend/app/models/: __init__.py  tag.py  ticket.py  ticket_tag.py
w1/backend/app/schemas/: __init__.py  tag.py  ticket.py
w1/backend/app/scripts/: seed_data.py
w1/backend/app/services/: tag_service.py  ticket_service.py
w1/backend/tests/: conftest.py  test_ticket_service.py
w1/frontend/: .env.production  .prettierignore  package.json  tsconfig.app.json
w2/db_query/: Makefile  (+1 more)
w2/db_query/backend/: .env.example  .gitignore  README.md  pyproject.toml
w2/db_query/backend/src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
w2/db_query/backend/src/api/v1/: connections.py  databases.py  dependencies.py  nl_queries.py  queries.py  router.py
w2/db_query/backend/src/models/: __init__.py  database.py  errors.py  query.py
w2/db_query/backend/src/services/: __init__.py  llm.py  metadata.py  metadata_base.py  metadata_mysql.py  protocols.py  query.py  query_mysql.py  registry.py
w2/db_query/backend/src/storage/: __init__.py  protocols.py  sqlite.py
w2/db_query/backend/src/utils/: __init__.py  db_utils.py
w2/db_query/backend/tests/: __init__.py  test_db_utils.py  test_mysql.py  test_sql_processor.py  test_storage.py
w2/db_query/backend/tests/integration/: __init__.py  conftest.py  test_mysql_integration.py  test_postgres_integration.py
w5/pg-mcp/: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
w5/pg-mcp/fixtures/: Makefile  large_erp.sql  medium_ecommerce.sql  small_blog.sql  test.md
w5/pg-mcp/src/pg_mcp/: __init__.py  __main__.py  server.py
w5/pg-mcp/src/pg_mcp/config/: __init__.py  loader.py  models.py  validators.py
w5/pg-mcp/src/pg_mcp/infrastructure/: database.py  openai_client.py  rate_limiter.py  schema_cache.py  sql_parser.py
w5/pg-mcp/src/pg_mcp/models/: __init__.py  errors.py  query.py  schema.py
w5/pg-mcp/src/pg_mcp/observability/: __init__.py  logging.py  metrics.py  metrics_server.py  tracing.py
w5/pg-mcp/src/pg_mcp/resilience/: __init__.py  backoff.py  rate_limiter.py  retry_executor.py
w5/pg-mcp/src/pg_mcp/security/: __init__.py  access_policy.py  audit_logger.py  explain_validator.py
w5/pg-mcp/src/pg_mcp/services/: __init__.py  query_executor.py  query_executor_manager.py  query_service.py  result_validator.py
w5/pg-mcp/src/pg_mcp/utils/: env.py  logging.py  serialization.py
w5/pg-mcp/tests/: __init__.py  conftest.py
w5/pg-mcp/tests/fixtures/: sample_schemas.py
w5/pg-mcp/tests/integration/: conftest.py  test_full_workflow.py  test_local_postgres.py  test_query_flow.py  test_resilience.py  test_security.py
w5/pg-mcp/tests/security/: __init__.py  test_access_bypass.py  test_sql_injection.py
w5/pg-mcp/tests/unit/: test_config.py  test_database.py  test_metrics.py  test_models.py  test_openai_client.py  test_query_service.py  test_query_service_integration.py  test_rate_limiter.py  test_result_validator.py  test_retry_executor.py  test_schema_cache.py  test_sql_parser.py  test_sql_parser_edge_cases.py
w5/pg-mcp/tests/unit/config/: test_validators.py
w5/pg-mcp/tests/unit/observability/: test_logging.py  test_metrics_server.py  test_tracing.py
w5/pg-mcp/tests/unit/resilience/: test_backoff.py  test_rate_limiter.py  test_rate_limiter_edge_cases.py  test_retry_executor_edge_cases.py
w5/pg-mcp/tests/unit/security/: test_access_policy.py  test_access_policy_edge_cases.py  test_audit_logger.py  test_explain_validator.py
w5/pg-mcp/tests/unit/utils/: test_serialization.py
w6/: pnpm-lock.yaml  pnpm-workspace.yaml
w7/gen-slide/backend/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
w7/gen-slide/backend/src/genslide/: __init__.py  config.py  main.py
w7/gen-slide/backend/src/genslide/api/: __init__.py  images.py  projects.py  router.py  schemas.py  slides.py
w7/gen-slide/backend/src/genslide/models/: __init__.py  image.py  project.py  slide.py
w7/gen-slide/backend/src/genslide/services/: __init__.py  cost_service.py  gemini_client.py  image_service.py  project_service.py  slide_service.py
w7/gen-slide/backend/src/genslide/storage/: __init__.py  file_storage.py  outline_store.py
w7/gen-slide/backend/src/genslide/utils/: __init__.py  hash.py
w7/gen-slide/backend/tests/: __init__.py  test_api.py
(+146 files in other folders)
