[project]
name = "db-query-tool"
version = "1.0.0"
description = "Database query tool with PostgreSQL support and natural language SQL generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.0.0",
    "sqlglot>=24.0.0,<25.0.0",
    "openai>=1.3.0",
    "psycopg[binary]>=3.1.0",
    "aiomysql>=0.2.0",
    "uvicorn>=0.27.0",
    "httpx[socks]>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
